--- a/VRChat/66/1058866.html
+++ b/VRChat/66/1058866.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QO7oBAn1Ub1aq5IgyvLEa0/WE5oLmDtEveG9rv3yxOk="></script>
+    "OfF2B1Xyoy/PSoXQJ0IA+6CUji//i4RQaCLWE1cbCAY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Rocking chair（VRChat想定）","description":"VRChat上で使用されることを想定したシンプルなロッキングチェアのモデルです。\nワールドに設置、AFK用のアバター等にお使いください。\n\n【ポリゴン数・テクスチャ】\n・ロッキングチェア（VRChat想定）　△3452\n\n【内容物】\n・ロッキングチェア（VRChat想定）.unitypackage\n・Readme.txt\n・設定画面\n\n【マテリアルの設定】\n1.Unity上で「ロッキングチェア（VRChat想定）.unitypackage」を開く\n2.Hierarchy→ロッキングチェア（VRChat想定）→Sphereを選択する\n3.Materialsの「ロッキングチェア本体」「クッション部分」のShaderのプルダウンを選択し\n任意のShaderを選択する（想定はStandard)\n\n【利用規約】\n▲CC0で著作権を放棄し、パブリックドメインに提供します。ご自由にお使いください。\nhttps://creativecommons.org/publicdomain/zero/1.0/deed.ja\n\n・クレジット記載不要、商業利用可\n\n・このモデルの作成者を騙ることの禁止\n\n・当モデルを使用して発生したトラブルに一切の責任を作成者は負いません。","url":"https://booth.pm/ja/items/1058866","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/00dca8ed-9814-4b4e-bd26-029d6809f5ee/i/1058866/af6d0753-974c-485a-bcd7-27102fb5736f_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QO7oBAn1Ub1aq5IgyvLEa0/WE5oLmDtEveG9rv3yxOk="></script>
+    nonce="OfF2B1Xyoy/PSoXQJ0IA+6CUji//i4RQaCLWE1cbCAY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1058866/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               72
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1058866/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               72
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
