--- a/VRChat/97/1058197.html
+++ b/VRChat/97/1058197.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/I4ijeXZ84X/DPo8aUCKcvxSoNu6n2AWQISvXGkGu4M="></script>
+    "HqH4sA03qTwADKC10XR6V134RnI3Ufm0Mhe5t0swtgY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"今日は喋れませんの意思表示用マスク","description":"今日は喋れない…\nそんな時はこのマスク！\nつけるだけで一目瞭然、喋れないんだってことが\n丸わかり!!\nいたって健全な一品です。","url":"https://booth.pm/ja/items/1058197","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1058197/9102b7f6-5dfc-4c72-aac4-7f538de23b60_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/I4ijeXZ84X/DPo8aUCKcvxSoNu6n2AWQISvXGkGu4M="></script>
+    nonce="HqH4sA03qTwADKC10XR6V134RnI3Ufm0Mhe5t0swtgY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1058197/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               375
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1058197/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               375
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
