--- a/VRChat/45/1057645.html
+++ b/VRChat/45/1057645.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "idpLlail3YfEJC/0+wy6kh6Z05QmwYSIC6FvB0nw4pk="></script>
+    "LD6n67eYZaUy9Hij59Yf696CwY+V5/ijTw1tCIT+Oiw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料][3Dモデル] Voxel_pumpkin [unitypackage]","description":"かぼちゃとかぼちゃの頭はいかが？\nハロウィーンの季節なので勢いで作ったかぼちゃのVoxelモデルです\nUnityに入れてお使いいただけます\n\n無料版と作者支援用がありますが商品内容や規約に差はありません\nお使いいただき気に入っていただけましたらご支援いただければ幸いです\n\n","url":"https://booth.pm/ja/items/1057645","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/6c72616e-1bae-4cce-bcc9-c341106fcced/i/1057645/1dba3bb0-262e-498f-8f7b-b01ada9852ff_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="idpLlail3YfEJC/0+wy6kh6Z05QmwYSIC6FvB0nw4pk="></script>
+    nonce="LD6n67eYZaUy9Hij59Yf696CwY+V5/ijTw1tCIT+Oiw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1057645/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1057645/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
