--- a/VRChat/88/1057188.html
+++ b/VRChat/88/1057188.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iJI3/b4jVqySBDgfNJCimCqzh5B9R+BchRgYq0jg0Fw="></script>
+    "nxLoIvmVHCN0KxTQijoHjc9tnDNyTZ75Hkc/J53XssI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハロウィンコスプレ北欧少女ソフィアちゃん","description":"ハロウィンのために作ったモデルです。\nfbxファイルとUVテクスチャのpngファイルが入っています。\n\n・このモデルの著作権は制作者　ぐねし　が所有しています。\n・使用時の連絡や著作権表示は必要ありません。営利目的での利用も可能です。\n・改変可能です。ただし本モデルの制作者を騙ることはお止めください。\n・極めて暴力的な表現や他者を不快にさせる行為に用いるのはお止めください。\n・本モデルデータを利用したことにより発生した損害、損失、その他の不利益に対して一切の責任を負いません。\n\n連作先：Twitter　@guneC2136\n\n使用した―ってスクショ送ってくれると喜びます。","url":"https://booth.pm/ja/items/1057188","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/78867027-c2fc-4af9-900c-781924406908/i/1057188/301c79b3-4068-4d41-bd57-e6f0043fda6e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iJI3/b4jVqySBDgfNJCimCqzh5B9R+BchRgYq0jg0Fw="></script>
+    nonce="nxLoIvmVHCN0KxTQijoHjc9tnDNyTZ75Hkc/J53XssI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1057188/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1057188/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
