--- a/VRChat/60/1057060.html
+++ b/VRChat/60/1057060.html
@@ -69,9 +69,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -101,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hb0oKiq4aR++shFrWVW3oALeTSY36InOaq6IHgCXsJs="></script>
+    "jAoXV8fb5Kj0BLOSvJMml0lBp9J/vXppKfwS/K6ID7k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おまつりのつえ","description":"おまつりのつえ　V2.0\n\nかぼちゃのつえ△1660\nかねのつえ△2006\n\n■はじめに\n本データは藍華藍葉（以下製作者）の制作した3Dモデルデータです\nVRChatでアバターに被らせることを想定していますが、他の用途でもご利用いただけます\n\n\n■内容物\n[おまつりのつえV2.0]\n┃Readme.txt：このファイルです。初めにお読みください\n┃\n┣[かぼちゃのつえV1.0]\n┃KabochaRod.blend：blenderのプロジェクトデータ\n┃KabochaRod.fbx：FBXファイル\n┃KabochaRod.unitypackage：Unityのパッケージファイルです。マテリアルの設定がしてあります\n┃tEmission.png：エミッション用テクスチャです。ネコの目とカボチャの穴が光ります\n┃tKabochaRod.png：テクスチャ\n┃tKabochaRod_MnMr.png：まんまるしぇーだー用テクスチャ\n┃uKabochaRod.png：UV展開図です\n┃uKabochaRod.psd：テクスチャの元ファイルをpsdファイルに変換したもの\n┃uKabochaRod.sai2：テクスチャの元ファイル\n┃\n┗[かねのつえV1.0]\n　Albedo.png：テクスチャ\n　BellRod.blend：blenderのプロジェクトデータ\n　BellRod.fbx：FBXファイル\n　BellRod.UnityPackage：Unityのパッケージファイルです。マテリアルの設定がしてあります\n　Normal.png：ノーマルマップのテクスチャ\n　Smoothness.png：スムーズのテクスチャ\n　Standard_Culloff.shader：カリングオフのシェーダー\n　UV.png：UV展開図です\n\n\n■シェイプキーについて\n[共通]\n長さ変更用のシェイプキーが1種類付属しています\nベースのシェイプキーが短い場合、適宜調節してください\n\n\n■揺れ物用ボーンについて\n[共通]\nDynamicBoneは付属しておりませんので、適宜設定してください\n[かぼちゃのつえ]\nネコの羽とカボチャを揺らせるようにボーンが入っています\n[かねのつえ]\n鐘とハンマー部を揺らせるようにボーンが入っています\n\n\n■制作に使用したソフトウェア\nBlender 2.79b\nPaintTool SAI Ver.2 (64bit) Preview.2018.05.26\nAdobe Photoshop CS6\nSubstance Painter 2018\nUnity 5.6.3p1 Personal (64bit)\n\n\n■改変について\n自由です\nお知らせいただくと製作者が見て喜ぶと思います\n\n\n■商用利用について\n可能です\n\n\n■禁止事項\n2次配布および転載を禁じます\n\n\n■履歴\n2018/10/17　初版　V1.0\n2018/11/13　V2.0\n　・かねのつえ追加\n\n\n■問い合わせ先\nTwitter：@ay_c_\nPixiv：https://www.pixiv.net/member.php?id=146587\nDiscord：Carumba#2912\nVRChat：Carumba","url":"https://booth.pm/ja/items/1057060","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/60a161b7-c7bb-4fa2-8dc4-8ac298dd3e5f/i/1057060/fa8ebdb4-3b08-4afb-a6f4-b05550e2728e_base_resized.jpg"}
     </script>
@@ -114,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hb0oKiq4aR++shFrWVW3oALeTSY36InOaq6IHgCXsJs="></script>
+    nonce="jAoXV8fb5Kj0BLOSvJMml0lBp9J/vXppKfwS/K6ID7k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -138,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -152,7 +151,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -193,7 +193,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1057060/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
@@ -208,14 +208,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1057060/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
