--- a/VRChat/88/1056688.html
+++ b/VRChat/88/1056688.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5HonAvMaTCQhBQTSiVxQe3xNhi70gjaTVbcFd/J/tHc="></script>
+    "FbTazH10bfKhx5Rk9TkG68BSp57sgiCcqz97XLLSV4U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"お菓子なハロウィンソード","description":"“Trick or Treat”\n「出たな！　コイツでおもてなしだッ！」\n「すごく……おいしいです」\n\nそんな遊びができるお菓子の剣です。サクサクしてます。\n\n\n\n\n\n\n～内容物～\n・unitypackage\n・FBX\n・テクスチャ\n・各種説明書（画像説明ありのPDF形式）\n　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります）\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing\n\n\n\n\n～詳細～\n・三角面数：980\n・マテリアル：1\n・まんまるしぇーだー適用済み\n　※必要に応じて最新版のシェーダーをご使用ください。\n・prefabやシーンデータ込み\n","url":"https://booth.pm/ja/items/1056688","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1056688/43b6bcf0-4734-460d-bc74-7ae035b66dea_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5HonAvMaTCQhBQTSiVxQe3xNhi70gjaTVbcFd/J/tHc="></script>
+    nonce="FbTazH10bfKhx5Rk9TkG68BSp57sgiCcqz97XLLSV4U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1056688/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1056688/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
