--- a/VRChat/52/1055252.html
+++ b/VRChat/52/1055252.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ipVgcl95hhb6BhdzOo5HM36vsg5G/pXQWVQGbg1i1Lo="></script>
+    "amQnCzURHYV6u9siph4FA+xTl0rsW3Nw+8cVzHGv4sM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】リボンセット6+1種類 + 汎用テクスチャ3種","description":"【更新履歴】\n2018/10/16　ver1.0 販売開始\n2018/10/17　ver1.1 ribbon_fの左右反転したリボンを追加しました\n2018/10/14　ver1.2 unitypackageとは別にfbxファイルを追加しました\n2022/0818　ver2.0.0 PhysBones対応　シェーダーをliltoonにしました。\n\n【商品説明】\nVRChatで使うことを想定したリボンのセットです。\nリボンそれぞれのテクスチャの他に汎用テクスチャも３枚用意してあります。\n組み合わせると２８種類のバリエーションが作れます。\n\nPhysBones設定済みなので揺れて触れます。\n事前にVRCSDK、liltoonをインポートしてください。\n\n【ファイル内容】\n・ribbons.unitypackage\n └・dataフォルダ\n └・generictexturesフォルダ\n └・texturesフォルダ\n └ ribbon_a.prefab\n └ ribbon_b.prefab\n └ ribbon_c.prefab\n └ ribbon_d.prefab\n └ ribbon_e.prefab\n └ ribbon_f.prefab\n └ ribbon_f_invert.prefab\n・fbxフォルダ\n └ ・textureフォルダ\n └ ribbon_a.fbx\n └ ribbon_b.fbx\n └ ribbon_c.fbx\n └ ribbon_d.fbx\n └ ribbon_e.fbx\n └ ribbon_f.fbx\n └ ribbon_f_invert.fbx\n\n\n【利用について】\n・この商品単体での再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。","url":"https://booth.pm/ja/items/1055252","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/12d291ee-7368-4fb1-bc8b-4bf670ee558a/i/1055252/e5225bb7-1b08-49ca-b172-f8affe1619e2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ipVgcl95hhb6BhdzOo5HM36vsg5G/pXQWVQGbg1i1Lo="></script>
+    nonce="amQnCzURHYV6u9siph4FA+xTl0rsW3Nw+8cVzHGv4sM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1055252/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               558
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1055252/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               558
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
