--- a/VRChat/41/1055141.html
+++ b/VRChat/41/1055141.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cF4XySp7x3hy6YDMppPTvrjXJ8Zsmg59U5/nxVpA6vc="></script>
+    "lzJTzQkZB/AZh9LyW4X6vmcLidCSwQ+BWe99pYNqtXo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"風邪マスク (てくすちゃ3つ入り:64ポリ)","description":"概要:\n\nVRCHATでの利用を想定した風邪用マスクのFBXデータとUnityPackageです。\n季節の変わり目は体調を崩しやすいです、VR流行り風邪に気をつけましょう。\nかかりたくない人もかかってしまった人も、口元を隠したい人や無言勢である事を表したい人にもオススメです、もちろんケモノ、モンスターや機械の方にも。\n\n*画像内のマスク以外の物は付属しません\n*100円の方はブースト用です、付属するデータは無料のものと同じです。\n\n情報:\n\nポリゴン数 : 64\nテクスチャサイズ : 255x127\n配布形式 : UnityPackage形式, FBX形式\n\n\n利用規約:\n\n・データの改変は自由にどうぞ。\n・改変前後を問わず、再配布や再販売は禁止です。\n・この商品に含まれる全てのデータの権利は配布元に帰属します。\n・更に詳しい規約については付属のReadMeをご覧ください。","url":"https://booth.pm/ja/items/1055141","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/33c82016-ad16-4f5d-a7de-e2f3c8dd4f4d/i/1055141/47bef6db-d835-457e-841b-f5dfa3951013_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cF4XySp7x3hy6YDMppPTvrjXJ8Zsmg59U5/nxVpA6vc="></script>
+    nonce="lzJTzQkZB/AZh9LyW4X6vmcLidCSwQ+BWe99pYNqtXo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1055141/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               109
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1055141/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               109
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
